allow cross origin resource sharing

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         users.
       </p>
       <h4>
-        Access to base URL <a href="https://nc-news-0plp.onrender.com/">here</a>
+        Access to base URL
+        <a href="https://nc-news-0plp.onrender.com/api">here</a>
       </h4>
     </header>
 
@@ -277,7 +278,7 @@ body = {
           (string).
 
           <br />
-          The slug must be unique otherwise you'll get a 400 error sayingt the
+          The slug must be unique otherwise you'll get a 400 error saying the
           topic already exists.
         </p>
         <h3>Example Request</h3>
